k8s/opensearch-dashboards/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: opensearch-dashboards
  namespace: sd-search
  labels:
    app: opensearch-dashboards
    app.kubernetes.io/part-of: sd-search
    app.kubernetes.io/name: opensearch-dashboards
spec:
  host: opensearch-dashboards.apps.example.com
  to:
    kind: Service
    name: opensearch-dashboards
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
